# AxiOwl-Desktop

./: .gitignore  CODEX_RUNTIME_DEPENDENCY_AUDIT.md  MVP_EVIDENCE_CHECKLIST.md  MVP_PROGRESS_STATUS.md  README.md  get_quota.py  index.html  installer.nsh  loading.html  main.js  models.json  models_utf8.json  nosign.cjs  nosign.js  package-lock.json  package.json  preload.js  server.js  test-ui.js  vite.config.js
.github/workflows/: build.yml
scripts/: app-server-probe.cjs  app-server-rate-limits.cjs  codex-runtime-discovery.cjs  mvp-smoke.ps1  packaged-auth-acceptance.cjs  packaged-ui-acceptance.cjs
src/: App.css  App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  auth.rs  codex_runtime.rs  commands.rs  dto.rs  events.rs  files.rs  lib.rs  logging.rs  main.rs  native.rs  paths.rs  process.rs  quota.rs  sessions.rs  workspace.rs  workspace_store.rs
src/components/EditorPane/: EditorPane.css  EditorPane.jsx
src/components/LoginScreen/: LoginScreen.css  LoginScreen.jsx
src/components/ReviewPane/: ReviewPane.css  ReviewPane.jsx
src/components/Sidebar/: Sidebar.css  Sidebar.jsx
src/components/ThreadView/: ThreadView.css  ThreadView.jsx
src/components/TitleBar/: TitleBar.css  TitleBar.jsx
src/lib/: desktopApi.js  runtimeMessaging.js
