[package]
name = "axiowl-desktop"
version = "0.1.10"
description = "AxiOwl desktop app"
authors = ["AxiOwl"]
edition = "2021"

[lib]
name = "axiowl_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
